# ECS_Architecture_Sample

./: .gitignore  CMakeLists.txt  README.md
src/: Component.h  Entity.h  InputComponent.cpp  InputComponent.h  PhysicComponent.cpp  PhysicComponent.h  RenderComponent.cpp  RenderComponent.h  Resources.h  TransformComponent.cpp  TransformComponent.h  Vehicles.cpp  Vehicles.h  main.cpp
